@@ -10,7 +10,7 @@
 . /etc/default/rc.site
 
 # Set base directory information
-RC_BASE="/etc"
+RC_BASE="ETCDIR"
 
 # Location of network device scripts and config files
 NETWORK_DEVICES="/etc/network"
