@@ -1,3 +1,10 @@
+2011-05-23	DJ Lucas <dj@linuxfromscratch.org>
+  * Makefile, etc/default/rc: The value of ETCDIR is used to set the RC_BASE at
+    install time. Changed default ETCDIR to /etc/rc.d and added /etc/init.d
+    symlink if ETCDIR is not /etc.
+  * Makefile, etc/inittab: Removed the installation of /etc/inittab as this is
+    done in the book.
+
 2011-05-21	DJ Lucas <dj@linuxfromscratch.org>
   * lib/lsb/init-functions: Merged the contents of etc/init.d/lfs-functions and
     standardized comment headers.
